Example of cleaning data in jupyter notebooks

--- a/pandas/series.ipynb
+++ b/pandas/series.ipynb
@@ -1156,6 +1156,260 @@
     ")\n",
     "missing_titles\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>body</th>\n",
+       "      <th>title</th>\n",
+       "      <th>url</th>\n",
+       "      <th>newspaper_uid</th>\n",
+       "      <th>host</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>uid</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1ec921e21fcdff41001c5806e15d9212</th>\n",
+       "      <td>\\nTres personas sin vida, entre ellos un niño ...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>https://www.eluniversal.com.mx/estados/asesina...</td>\n",
+       "      <td>eluniversal</td>\n",
+       "      <td>www.eluniversal.com.mx</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>e0d9044d4f98745f6f30cacf13630e53</th>\n",
+       "      <td>\\n\\nEn Morena, la candidatura de Delfina Gómez...</td>\n",
+       "      <td>La fractura de Morena en el Edomex</td>\n",
+       "      <td>http://www.eluniversal.com.mx/opinion/carlos-l...</td>\n",
+       "      <td>eluniversal</td>\n",
+       "      <td>www.eluniversal.com.mx</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>d46d95747768cd61c60b9d155098facc</th>\n",
+       "      <td>\\n Los Ángeles.— “La naturaleza es mi templo. ...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>http://www.eluniversal.com.mx/espectaculos/jam...</td>\n",
+       "      <td>eluniversal</td>\n",
+       "      <td>www.eluniversal.com.mx</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>496b00ba6a7e845100d68f5d9421b5a8</th>\n",
+       "      <td>\\n\\nTecomán.— En Tecomán, Colima, nadie ha peg...</td>\n",
+       "      <td>Duermen en calles de Tecomán por temor a répli...</td>\n",
+       "      <td>http://www.eluniversal.com.mx/nacion/duermen-e...</td>\n",
+       "      <td>eluniversal</td>\n",
+       "      <td>www.eluniversal.com.mx</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3393da776016f9e8686cfe1e4988faab</th>\n",
+       "      <td>\\n “Fue el Ejército”, son los gritos que se es...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>http://www.eluniversal.com.mx/opinion/saskia-n...</td>\n",
+       "      <td>eluniversal</td>\n",
+       "      <td>www.eluniversal.com.mx</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>cbd91c84565de17e05e49d9a726e7dae</th>\n",
+       "      <td>\\nEl salto de legisladores de oposición a More...</td>\n",
+       "      <td>Morenista gasta 70 mdp en su American Express</td>\n",
+       "      <td>http://www.eluniversal.com.mx/opinion/mario-ma...</td>\n",
+       "      <td>eluniversal</td>\n",
+       "      <td>www.eluniversal.com.mx</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6e9f8cb0337588c9cb93eb497f953e71</th>\n",
+       "      <td>\\nNo será un Mundial como cualquier otro el qu...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>http://www.eluniversal.com.mx/mundial-futbol/a...</td>\n",
+       "      <td>eluniversal</td>\n",
+       "      <td>www.eluniversal.com.mx</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0d2a6bc2df20c7f5f1b7df570181fbfa</th>\n",
+       "      <td>\\nEn la votación de este miércoles en el Senad...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>http://www.eluniversal.com.mx/opinion/salvador...</td>\n",
+       "      <td>eluniversal</td>\n",
+       "      <td>www.eluniversal.com.mx</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>c35b201b5cb0d2c8fd731e98f6cb1ed2</th>\n",
+       "      <td>\\nEl viernes pasado, una fuente que varias vec...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>http://www.eluniversal.com.mx/opinion/hector-d...</td>\n",
+       "      <td>eluniversal</td>\n",
+       "      <td>www.eluniversal.com.mx</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>d6eddaaa630c39b2f070a1049e6da490</th>\n",
+       "      <td>\\n\\nContra la meritocracia. Incluso si, contra...</td>\n",
+       "      <td>Ebrard y Monreal: sin zanahoria y con el palo ...</td>\n",
+       "      <td>http://www.eluniversal.com.mx/opinion/jose-car...</td>\n",
+       "      <td>eluniversal</td>\n",
+       "      <td>www.eluniversal.com.mx</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>28 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                                               body  \\\n",
+       "uid                                                                                   \n",
+       "1ec921e21fcdff41001c5806e15d9212  \\nTres personas sin vida, entre ellos un niño ...   \n",
+       "e0d9044d4f98745f6f30cacf13630e53  \\n\\nEn Morena, la candidatura de Delfina Gómez...   \n",
+       "d46d95747768cd61c60b9d155098facc  \\n Los Ángeles.— “La naturaleza es mi templo. ...   \n",
+       "496b00ba6a7e845100d68f5d9421b5a8  \\n\\nTecomán.— En Tecomán, Colima, nadie ha peg...   \n",
+       "3393da776016f9e8686cfe1e4988faab  \\n “Fue el Ejército”, son los gritos que se es...   \n",
+       "...                                                                             ...   \n",
+       "cbd91c84565de17e05e49d9a726e7dae  \\nEl salto de legisladores de oposición a More...   \n",
+       "6e9f8cb0337588c9cb93eb497f953e71  \\nNo será un Mundial como cualquier otro el qu...   \n",
+       "0d2a6bc2df20c7f5f1b7df570181fbfa  \\nEn la votación de este miércoles en el Senad...   \n",
+       "c35b201b5cb0d2c8fd731e98f6cb1ed2  \\nEl viernes pasado, una fuente que varias vec...   \n",
+       "d6eddaaa630c39b2f070a1049e6da490  \\n\\nContra la meritocracia. Incluso si, contra...   \n",
+       "\n",
+       "                                                                              title  \\\n",
+       "uid                                                                                   \n",
+       "1ec921e21fcdff41001c5806e15d9212                                                NaN   \n",
+       "e0d9044d4f98745f6f30cacf13630e53                 La fractura de Morena en el Edomex   \n",
+       "d46d95747768cd61c60b9d155098facc                                                NaN   \n",
+       "496b00ba6a7e845100d68f5d9421b5a8  Duermen en calles de Tecomán por temor a répli...   \n",
+       "3393da776016f9e8686cfe1e4988faab                                                NaN   \n",
+       "...                                                                             ...   \n",
+       "cbd91c84565de17e05e49d9a726e7dae      Morenista gasta 70 mdp en su American Express   \n",
+       "6e9f8cb0337588c9cb93eb497f953e71                                                NaN   \n",
+       "0d2a6bc2df20c7f5f1b7df570181fbfa                                                NaN   \n",
+       "c35b201b5cb0d2c8fd731e98f6cb1ed2                                                NaN   \n",
+       "d6eddaaa630c39b2f070a1049e6da490  Ebrard y Monreal: sin zanahoria y con el palo ...   \n",
+       "\n",
+       "                                                                                url  \\\n",
+       "uid                                                                                   \n",
+       "1ec921e21fcdff41001c5806e15d9212  https://www.eluniversal.com.mx/estados/asesina...   \n",
+       "e0d9044d4f98745f6f30cacf13630e53  http://www.eluniversal.com.mx/opinion/carlos-l...   \n",
+       "d46d95747768cd61c60b9d155098facc  http://www.eluniversal.com.mx/espectaculos/jam...   \n",
+       "496b00ba6a7e845100d68f5d9421b5a8  http://www.eluniversal.com.mx/nacion/duermen-e...   \n",
+       "3393da776016f9e8686cfe1e4988faab  http://www.eluniversal.com.mx/opinion/saskia-n...   \n",
+       "...                                                                             ...   \n",
+       "cbd91c84565de17e05e49d9a726e7dae  http://www.eluniversal.com.mx/opinion/mario-ma...   \n",
+       "6e9f8cb0337588c9cb93eb497f953e71  http://www.eluniversal.com.mx/mundial-futbol/a...   \n",
+       "0d2a6bc2df20c7f5f1b7df570181fbfa  http://www.eluniversal.com.mx/opinion/salvador...   \n",
+       "c35b201b5cb0d2c8fd731e98f6cb1ed2  http://www.eluniversal.com.mx/opinion/hector-d...   \n",
+       "d6eddaaa630c39b2f070a1049e6da490  http://www.eluniversal.com.mx/opinion/jose-car...   \n",
+       "\n",
+       "                                 newspaper_uid                    host  \n",
+       "uid                                                                     \n",
+       "1ec921e21fcdff41001c5806e15d9212   eluniversal  www.eluniversal.com.mx  \n",
+       "e0d9044d4f98745f6f30cacf13630e53   eluniversal  www.eluniversal.com.mx  \n",
+       "d46d95747768cd61c60b9d155098facc   eluniversal  www.eluniversal.com.mx  \n",
+       "496b00ba6a7e845100d68f5d9421b5a8   eluniversal  www.eluniversal.com.mx  \n",
+       "3393da776016f9e8686cfe1e4988faab   eluniversal  www.eluniversal.com.mx  \n",
+       "...                                        ...                     ...  \n",
+       "cbd91c84565de17e05e49d9a726e7dae   eluniversal  www.eluniversal.com.mx  \n",
+       "6e9f8cb0337588c9cb93eb497f953e71   eluniversal  www.eluniversal.com.mx  \n",
+       "0d2a6bc2df20c7f5f1b7df570181fbfa   eluniversal  www.eluniversal.com.mx  \n",
+       "c35b201b5cb0d2c8fd731e98f6cb1ed2   eluniversal  www.eluniversal.com.mx  \n",
+       "d6eddaaa630c39b2f070a1049e6da490   eluniversal  www.eluniversal.com.mx  \n",
+       "\n",
+       "[28 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 4. añadir uid a las filas\n",
+    "\n",
+    "import hashlib\n",
+    "\n",
+    "uids = (el_universal\n",
+    "            .apply(lambda row: hashlib.md5(bytes(row['url'].encode())), axis=1)\n",
+    "            .apply(lambda hash_object: hash_object.hexdigest())\n",
+    "       )\n",
+    "\n",
+    "el_universal['uid'] = uids\n",
+    "el_universal.set_index('uid', inplace=True)\n",
+    "\n",
+    "el_universal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "uid\n",
+       "1ec921e21fcdff41001c5806e15d9212    Tres personas sin vida, entre ellos un niño de...\n",
+       "e0d9044d4f98745f6f30cacf13630e53    En Morena, la candidatura de Delfina Gómez al ...\n",
+       "d46d95747768cd61c60b9d155098facc     Los Ángeles.— “La naturaleza es mi templo. Ac...\n",
+       "496b00ba6a7e845100d68f5d9421b5a8    Tecomán.— En Tecomán, Colima, nadie ha pegado ...\n",
+       "3393da776016f9e8686cfe1e4988faab     “Fue el Ejército”, son los gritos que se escu...\n",
+       "                                                          ...                        \n",
+       "cbd91c84565de17e05e49d9a726e7dae    El salto de legisladores de oposición a Morena...\n",
+       "6e9f8cb0337588c9cb93eb497f953e71    No será un Mundial como cualquier otro el que ...\n",
+       "0d2a6bc2df20c7f5f1b7df570181fbfa    En la votación de este miércoles en el Senado ...\n",
+       "c35b201b5cb0d2c8fd731e98f6cb1ed2    El viernes pasado, una fuente que varias veces...\n",
+       "d6eddaaa630c39b2f070a1049e6da490    Contra la meritocracia. Incluso si, contra la ...\n",
+       "Length: 28, dtype: object"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stripped_body = (el_universal\n",
+    "                    .apply(lambda row: row['body'], axis=1)\n",
+    "                    .apply(lambda body: list(body))\n",
+    "                    .apply(lambda letters: list(map(lambda letter: letter.replace('\\n', ''), letters)))\n",
+    "                    .apply(lambda letters: ''.join(letters))\n",
+    "                )\n",
+    "stripped_body"
+   ]
   }
  ],
  "metadata": {
